--- a/src/index.css
+++ b/src/index.css
@@ -228,7 +228,7 @@ h3 {
 .nothing h3 {
   color: white;
   text-align: center;
-  font-size: 5rem;
+  font-size: 3rem;
   font-family: "Comfortaa-Light";
 }
 
@@ -250,6 +250,7 @@ h3 {
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   grid-template-rows: repeat(2, 1fr);
   grid-gap: 1rem 1rem;
+  justify-items: center;
 }
 
 .card {
@@ -316,7 +317,13 @@ h3 {
   align-items: flex-end;
   width: 100%;
   height: 4vh;
+  margin-top: 1rem;
   background: rgb(0, 64, 107);
+}
+@media (max-width: 400px) {
+  .selectbar {
+    margin-top: 2rem;
+  }
 }
 
 .select__boxsearch {
@@ -324,6 +331,11 @@ h3 {
   height: 30px;
   margin-left: 5%;
   z-index: 3;
+}
+@media (max-width: 570px) {
+  .select__boxsearch {
+    width: 50%;
+  }
 }
 .select__boxsearch__select {
   font-size: 2rem;
@@ -365,6 +377,11 @@ h3 {
   height: 30px;
   margin-left: 5%;
   z-index: 3;
+}
+@media (max-width: 570px) {
+  .searchcont__boxsearch {
+    width: 50%;
+  }
 }
 .searchcont__boxsearch__select {
   font-size: 2rem;
