--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -145,7 +145,7 @@ h3
     h3
         color: white
         text-align: center  
-        font-size: 5rem
+        font-size: 3rem
         font-family: "Comfortaa-Light" 
 
 
@@ -169,6 +169,7 @@ h3
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr))
     grid-template-rows: repeat(2, 1fr)
     grid-gap: 1rem 1rem
+    justify-items: center
 
 
 .card
@@ -232,7 +233,10 @@ h3
     align-items: flex-end
     width: 100%
     height: 4vh
+    margin-top: 1rem
     background: rgb(0, 64, 107)
+    @media (max-width: 400px)  
+        margin-top: 2rem
 
 .select
     &__boxsearch
@@ -240,6 +244,9 @@ h3
         height: 30px
         margin-left: 5%
         z-index: 3
+        @media (max-width: 570px)  
+            width: 50%
+
         
 
         &__select
@@ -281,6 +288,8 @@ h3
         height: 30px
         margin-left: 5%
         z-index: 3
+        @media (max-width: 570px)  
+            width: 50%
         &__select
             font-size: 2rem
             color: white
