--- a/css/index.css
+++ b/css/index.css
@@ -109,9 +109,9 @@ h3 {
 }
 
 .nav {
-  position: fixed;
+  position: relative;
   width: 100%;
-  height: 8rem;
+  height: 13vh;
   background: rgb(0, 75, 146);
   background: url(img/movfon-01.png) right/cover no-repeat;
   display: flex;
@@ -119,16 +119,15 @@ h3 {
   justify-content: space-between;
   flex-wrap: wrap;
   box-shadow: 0px 3px 5px black;
-  z-index: 5;
+  z-index: 2;
 }
 .nav__logo {
   width: 30rem;
-  height: 110%;
+  height: 10rem;
   display: flex;
   align-items: center;
   justify-content: center;
   background: url(img/MovLogo-01.svg) center/cover no-repeat;
-  scale: 80%;
 }
 .nav__h1 {
   text-align: center;
@@ -139,16 +138,13 @@ h3 {
 
 .footer {
   width: 100%;
-  height: 7rem;
+  height: 8vh;
   background: rgb(0, 64, 107);
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
   box-shadow: 0px -3px 5px black;
-  position: fixed;
-  bottom: 0rem;
-  z-index: 8;
 }
 .footer__logo {
   width: 21rem;
@@ -215,48 +211,7 @@ h3 {
 .search__btn:hover {
   background: #007997;
 }
-.search__btn2 {
-  position: absolute;
-  bottom: -50%;
-  left: 83%;
-  width: 4rem;
-  height: 4rem;
-  border-radius: 50%;
-  background: #005a70;
-  color: white;
-  border: none;
-  display: inline-block;
-  transition: All 0.1s;
-  box-shadow: 0px 3px 5px black;
-  z-index: 20;
-}
-.search__btn2:hover {
-  background: #007997;
-}
-.search__btn2:active {
-  scale: 95%;
-  box-shadow: 0px 0px 2px black;
-  background: #004455;
-}
-.search__btn3 {
-  position: absolute;
-  bottom: -50%;
-  left: 74%;
-  width: 4rem;
-  height: 4rem;
-  border-radius: 50%;
-  background: #005a70;
-  color: white;
-  border: none;
-  display: inline-block;
-  transition: All 0.1s;
-  box-shadow: 0px 3px 5px black;
-  z-index: 10;
-}
-.search__btn3:hover {
-  background: #007997;
-}
-.search__btn3:active {
+.search__btn:active {
   scale: 95%;
   box-shadow: 0px 0px 2px black;
   background: #004455;
@@ -279,18 +234,16 @@ h3 {
 
 .content {
   width: 100%;
-  min-height: 78vh;
+  min-height: 65vh;
   max-height: auto;
   background: rgb(0, 64, 107);
   position: relative;
 }
 
 .boxcard {
-  position: relative;
-  top: 11rem;
   margin: 0 auto;
-  width: 80%;
-  height: 80%;
+  width: 90%;
+  height: auto;
   background: rgb(0, 64, 107);
   padding: 1rem;
   display: grid;
@@ -298,7 +251,6 @@ h3 {
   grid-template-rows: repeat(2, 1fr);
   grid-gap: 1rem 1rem;
   justify-items: center;
-  margin-bottom: 20rem;
 }
 
 .card {
@@ -358,23 +310,26 @@ h3 {
 .card__img:hover {
   position: absolute;
   width: 100%;
-  top: 0;
+  top: 2rem;
   left: 0;
+  scale: 115%;
   transition: All 0.2s;
   box-shadow: 0px 3px 5px black;
   z-index: 4;
 }
 
 .selectbar {
-  position: fixed;
-  top: 7.1rem;
-  z-index: 4;
   display: flex;
   align-items: flex-end;
   width: 100%;
-  height: 3rem;
+  height: 4vh;
   margin-top: 1rem;
   background: rgb(0, 64, 107);
+}
+@media (max-width: 400px) {
+  .selectbar {
+    margin-top: 2rem;
+  }
 }
 
 .select__boxsearch {
@@ -437,125 +392,4 @@ h3 {
 .searchcont__boxsearch__select {
   font-size: 2rem;
   color: white;
-}
-
-.info {
-  width: 90%;
-  max-height: -moz-min-content;
-  max-height: min-content;
-  padding: 2rem;
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  background: #ffffff;
-  z-index: 10;
-  border: 0.1rem solid rgb(0, 97, 161);
-  border-radius: 1rem;
-  box-shadow: 0px 3px 5px black;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr min-content;
-  justify-items: start;
-  justify-content: start;
-  align-content: center;
-  overflow: hidden;
-}
-@media (max-width: 570px) {
-  .info {
-    display: block;
-    margin: 0 auto;
-  }
-}
-.info__poster {
-  height: 100%;
-  grid-column: 1/2;
-  grid-row: 1/-1;
-}
-@media (max-width: 570px) {
-  .info__poster {
-    display: flex;
-    justify-content: center;
-  }
-}
-.info__poster__img {
-  width: 100%;
-  height: auto;
-}
-@media (max-width: 570px) {
-  .info__poster__img {
-    width: 80%;
-  }
-}
-.info__content {
-  grid-column: 2/-1;
-  width: 100%;
-  padding: 1rem;
-  color: black;
-  font-size: 1.7rem;
-  display: flex;
-  flex-direction: column;
-}
-.info__content__h1 {
-  margin-bottom: 1.2rem;
-}
-@media (max-width: 570px) {
-  .info__content__h1 {
-    font-size: 1.5rem;
-  }
-}
-.info__content__h2 {
-  margin-bottom: 0.8rem;
-}
-@media (max-width: 570px) {
-  .info__content__h2 {
-    font-size: 1rem;
-  }
-}
-.info__content__h2__rating {
-  background: #aca000;
-  border-radius: 50%;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 10rem;
-  height: 10rem;
-  text-align: center;
-  box-shadow: 0px 3px 5px black;
-  font-size: 2.1rem;
-}
-@media (max-width: 570px) {
-  .info__content__h2__rating {
-    font-size: 1.5rem;
-    width: 6rem;
-    height: 6rem;
-  }
-}
-.info__content__text {
-  margin-bottom: 0.8rem;
-}
-@media (max-width: 570px) {
-  .info__content__text {
-    font-size: 1rem;
-    margin-bottom: 0.5rem;
-  }
-}
-.info__content__close {
-  text-align: right;
-  width: 7rem;
-  height: 7rem;
-  background: #630000;
-  border-radius: 50%;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  bottom: -2rem;
-  right: -1rem;
-  overflow: hidden;
-  font-size: 7rem;
-  cursor: pointer;
 }/*# sourceMappingURL=index.css.map */
